fix spacing at top

--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,9 @@ a {
 .page-content {
     padding-top: 25vh;
 }
+.about-content {
+    padding-top: 15vh;
+}
 .experience {
     margin-top: 30px;
 }
